# UniversalCalculatorSDT

./: CMakeLists.txt  README.md  main.cpp
controller/: complex_number_controller.cpp  complex_number_controller.hpp  controller.cpp  controller.hpp  fraction_number_controller.cpp  fraction_number_controller.hpp  p_number_controller.cpp  p_number_controller.hpp
model/converter/: converter_decimal_to_p.cpp  converter_decimal_to_p.hpp  converter_p_to_decimal.cpp  converter_p_to_decimal.hpp
model/editor/: editor.cpp  editor.hpp
model/exception/: calculation_exception.cpp  calculation_exception.hpp  conversion_exception.cpp  conversion_exception.hpp  number_exception.cpp  number_exception.hpp
model/history/: history.cpp  history.hpp
model/memory/: memory.cpp  memory.hpp  memory.inl
model/number/: complex_number.cpp  complex_number.hpp  fraction_number.cpp  fraction_number.hpp  i_number.hpp  p_number.cpp  p_number.hpp  real_number.cpp  real_number.hpp
model/processor/: processor.cpp  processor.hpp  processor.inl
view/: conversion.js  main.qml
view/components/: BottomPanel.qml  TopPanel.qml
view/pages/: MainPage.qml  ReferencePage.qml
